# sdp-physqgen

./: .gitignore  LICENSE  PhysQGen Development Setup.md  PhysQGen Setup and Use Doc.md  PhysQGen Setup and Use Doc.txt  README.md  admin.py  app.py  config.json  index.html  main.py  pyproject.toml  requirements.txt  results.py  web.config
configs/: active_config.json  example.config  example.json  kinematics.json
data/: data.db
docs/: Configuration Files.md  Development Setup.md  Hosting Options.md  PhysQGen Development Setup.md  Question Config File.md  Question Types.md
scripts/: regenerate_database.py
src/: flask.py
src/physqgen/: TEMP.py  __init__.py  app.py  application.py  auth.py  constants.py  database.py  flask.py  session.py
src/physqgen/admin/: __init__.py  constants.py  create_database.py  getAdminData.py  get_admin_data.py  qtapp.py  register_config.py  student_data.py
src/physqgen/app/: __init__.py  app.py  application.py  auth.py  constants.py  register_config.py  view.py
src/physqgen/app/static/: style.css
src/physqgen/app/static/style/: style.css
src/physqgen/app/website/: createquestion.html  exit.html  index.html  loginpage.html  questionpage.html  sessiondata.html  teacheropening.html  teacherview.html
src/physqgen/data/: base.db
src/physqgen/generator/: __init__.py  config.py  question.py  variable.py  variables.py
src/physqgen/generator/config/: __init__.py  question.py  session.py  variable.py
src/website/: createquestion.html  loginpage.html  questionpage.html  style.css  teacheropening.html  teacherview.html
tests/: database_interaction.py  regenerate_database.py
