[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "physqgen"
version = "2.1.0"
authors = [
    {name="Amelia", email="asing1@ocdsb.ca"},
    {name="Isabelle", email="inich3@ocdsb.ca"},
    {name="Stuart", email="sjone12@ocdsb.ca"}
]
description = "Physics Question Generator"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "blinker==1.7.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "Flask==3.0.2",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.3",
    "MarkupSafe==2.1.5",
    "packaging==24.0",
    "PySide6==6.6.3.1",
    "PySide6_Addons==6.6.3.1",
    "PySide6_Essentials==6.6.3.1",
    "QtPy==2.4.1",
    "shiboken6==6.6.3.1",
    "Werkzeug==3.0.3",
    "wfastcgi==3.0.0"
]

[project.urls]
"Github" = "https://github.com/MHS-CSCE/sdp-physqgen"
